推进网络与界面地基 / advance network and GUI foundations
完成 builder/storage 剩余消息、总注册器、GUI Canvas/窗口/控件/浮动层、culling 持久化与蓝图小数据模型的 1.12.2 适配，并记录第七轮整包编译前线。

Ports the remaining builder/storage packets and registrar, GUI canvas/windows/widgets/floating layer, culling persistence, and small blueprint data models to 1.12.2, with the seventh compile frontier documented.