@@ -1,112 +1,90 @@
 package com.rtsbuilding.rtsbuilding.client.screen.panel;
 
-import net.minecraft.client.gui.GuiGraphics;
+import com.rtsbuilding.rtsbuilding.client.input.overlay.LegacyGuiGraphics;
+import net.minecraft.client.renderer.GlStateManager;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 
 /**
- * Routes input and rendering for movable RTS windows in front-to-back order.
+ * 统一管理所有可移动 RTS 窗口的层级、渲染顺序和输入分发。
  *
- * <p>The layer owns window stacking, z-order rendering, and input dispatch. It
- * deliberately does not know what a window does internally, which gameplay
- * action it represents, or how persistent UI state is saved. That keeps the
- * current mainline screen behavior intact while giving future windows a single
- * place to join rendering and input handling.
- *
- * <p>Windows are rendered in ascending {@link RtsWindowPanel#getLastClickTime}
- * order — the most recently clicked window appears on top. Clicking any window
- * brings it to the front automatically.
+ * <p>本层只负责窗口编排，不拥有窗口内部的业务状态。列表始终按最后点击时间从后到前排列；
+ * 1.12 的 GUI 使用立即绘制，因此通过独立矩阵和深度带隔离每个窗口，而不调用现代缓冲区 flush。
  */
-public record RtsFloatingWindowLayer(List<RtsWindowPanel> frontToBackWindows,
-                                     RtsFloatingWindowInputRouter inputRouter) {
-    /** 底栏数量覆盖位于 Z=300；浮窗必须从更高层开始，并为内部物品/数量预留完整深度。 */
+public final class RtsFloatingWindowLayer {
     private static final float WINDOW_BASE_Z = 400.0F;
     private static final float WINDOW_Z_STRIDE = 400.0F;
 
-    public RtsFloatingWindowLayer(RtsWindowPanel... frontToBackWindows) {
-        this(new ArrayList<>(List.of(frontToBackWindows)));
+    private final List<RtsWindowPanel> frontToBackWindows;
+    private final RtsFloatingWindowInputRouter inputRouter;
+
+    public RtsFloatingWindowLayer(RtsWindowPanel... windows) {
+        this(new ArrayList<RtsWindowPanel>(Arrays.asList(windows)));
     }
 
     private RtsFloatingWindowLayer(List<RtsWindowPanel> windows) {
-        this(windows, new RtsFloatingWindowInputRouter(windows));
-        // 初始 z 排序修正：从后往前调用 markBroughtToFront，
-        // 使得前部窗口（索引 0，前端）获得较大的 lastClickTime，
-        // 在升序排序中后渲染（出现在顶层）。
-        for (int i = frontToBackWindows.size() - 1; i >= 0; i--) {
-            frontToBackWindows.get(i).markBroughtToFront();
+        this.frontToBackWindows = windows;
+        this.inputRouter = new RtsFloatingWindowInputRouter(windows);
+        for (int i = windows.size() - 1; i >= 0; i--) {
+            windows.get(i).markBroughtToFront();
         }
         ensureZOrder();
     }
 
-    // ======================== Z-order Rendering ========================
+    /** 保留原 record 访问器形状，避免调用方额外承担版本差异。 */
+    public List<RtsWindowPanel> frontToBackWindows() {
+        return this.frontToBackWindows;
+    }
 
-    /**
-     * Renders all registered windows sorted by z-order (last-click time).
-     * Windows with lower click times (clicked longer ago) are rendered first,
-     * so the most recently clicked window appears on top.
-     */
-    public void renderFloatingWindows(GuiGraphics g, int mouseX, int mouseY) {
+    public RtsFloatingWindowInputRouter inputRouter() {
+        return this.inputRouter;
+    }
+
+    public void renderFloatingWindows(LegacyGuiGraphics graphics, int mouseX, int mouseY) {
         if (this.frontToBackWindows.isEmpty()) return;
         ensureZOrder();
 
-        // 找出鼠标所在的最顶层窗口索引（列表按升序排列，最后一个为顶层）
-        int topmostHoverIdx = -1;
+        int topmostHoverIndex = -1;
         for (int i = this.frontToBackWindows.size() - 1; i >= 0; i--) {
             RtsWindowPanel window = this.frontToBackWindows.get(i);
             if (window.isVisibleWindow() && window.isInsideWindow(mouseX, mouseY)) {
-                topmostHoverIdx = i;
+                topmostHoverIndex = i;
                 break;
             }
         }
 
         for (int i = 0; i < this.frontToBackWindows.size(); i++) {
             RtsWindowPanel window = this.frontToBackWindows.get(i);
-            // 对鼠标在区域内但非最顶层的窗口抑制悬浮效果
-            boolean shouldSuppress = topmostHoverIdx >= 0 && i != topmostHoverIdx
-                    && window.isVisibleWindow()
-                    && window.isInsideWindow(mouseX, mouseY);
-            window.setSkipHoverDetection(shouldSuppress);
-            g.pose().pushPose();
+            boolean suppressHover = topmostHoverIndex >= 0 && i != topmostHoverIndex
+                    && window.isVisibleWindow() && window.isInsideWindow(mouseX, mouseY);
+            window.setSkipHoverDetection(suppressHover);
+            GlStateManager.pushMatrix();
             try {
-                // renderItem 和数量覆盖会在当前 Pose 上继续增加约 150/300 Z。
-                // 每个浮窗使用独立深度带，后面的窗口背景才能真正遮住前一个窗口和底栏物品。
-                g.pose().translate(0.0F, 0.0F, windowLayerZ(i));
-                window.render(g, mouseX, mouseY, 0.0F);
-                // 必须在恢复 Pose 前提交，确保缓冲顶点携带本窗口的真实深度。
-                g.flush();
+                GlStateManager.translate(0.0F, 0.0F, windowLayerZ(i));
+                window.render(graphics, mouseX, mouseY, 0.0F);
             } finally {
-                g.pose().popPose();
+                GlStateManager.popMatrix();
                 window.setSkipHoverDetection(false);
             }
         }
     }
 
-    /**
-     * Renders the overlay (tooltips, etc.) only for the topmost window that
-     * the mouse cursor is hovering over. Lower windows whose entire bounds
-     * are covered by a higher window have their overlays suppressed, which
-     * prevents e.g. a tooltip from the covered panel showing through.
-     * <p>
-     * The list is sorted ascending by click time (back first, front last)
-     * from the preceding render pass, so we iterate in reverse to find the
-     * topmost window at the cursor position first.
-     */
-    public void renderFloatingWindowOverlays(GuiGraphics g, int mouseX, int mouseY) {
+    /** 只让鼠标所在的最前窗口产生提示，避免被遮挡窗口的文字穿透。 */
+    public void renderFloatingWindowOverlays(LegacyGuiGraphics graphics, int mouseX, int mouseY) {
         ensureZOrder();
         for (int i = this.frontToBackWindows.size() - 1; i >= 0; i--) {
             RtsWindowPanel window = this.frontToBackWindows.get(i);
             if (window.isVisibleWindow() && window.isInsideWindow(mouseX, mouseY)) {
-                g.pose().pushPose();
+                GlStateManager.pushMatrix();
                 try {
-                    // 覆盖层位于所属窗口深度带顶部，避免提示再次被窗口内物品遮挡。
-                    g.pose().translate(0.0F, 0.0F,
+                    GlStateManager.translate(0.0F, 0.0F,
                             windowLayerZ(i) + WINDOW_Z_STRIDE - 1.0F);
-                    window.renderOverlays(g, mouseX, mouseY);
-                    g.flush();
+                    window.renderOverlays(graphics, mouseX, mouseY);
                 } finally {
-                    g.pose().popPose();
+                    GlStateManager.popMatrix();
                 }
                 return;
             }
@@ -120,10 +98,9 @@ public record RtsFloatingWindowLayer(List<RtsWindowPanel> frontToBackWindows,
     public RtsWindowPanel.ResizeCursor resizeCursorAt(double mouseX, double mouseY) {
         ensureZOrder();
         for (int i = this.frontToBackWindows.size() - 1; i >= 0; i--) {
-            RtsWindowPanel.ResizeCursor cursor = this.frontToBackWindows.get(i).currentResizeCursor(mouseX, mouseY);
-            if (cursor != RtsWindowPanel.ResizeCursor.DEFAULT) {
-                return cursor;
-            }
+            RtsWindowPanel.ResizeCursor cursor =
+                    this.frontToBackWindows.get(i).currentResizeCursor(mouseX, mouseY);
+            if (cursor != RtsWindowPanel.ResizeCursor.DEFAULT) return cursor;
         }
         return RtsWindowPanel.ResizeCursor.DEFAULT;
     }
@@ -133,22 +110,12 @@ public record RtsFloatingWindowLayer(List<RtsWindowPanel> frontToBackWindows,
         for (int i = this.frontToBackWindows.size() - 1; i >= 0; i--) {
             RtsWindowPanel window = this.frontToBackWindows.get(i);
             if (window.isVisibleWindow()
-                    && (window.isInsideWindow(mouseX, mouseY) || window.isInsideResizableBorder(mouseX, mouseY))) {
-                return true;
-            }
+                    && (window.isInsideWindow(mouseX, mouseY)
+                    || window.isInsideResizableBorder(mouseX, mouseY))) return true;
         }
         return false;
     }
 
-    // ======================== Input Routing ========================
-
-    /**
-     * Routes mouse clicks through windows in top-to-bottom (front-to-back) order.
-     * The list is currently sorted ascending by click time (back first, front last)
-     * because the render pass sorted it. We iterate in reverse so the topmost
-     * window under the cursor is checked first.
-     * When a window handles the click, it is automatically brought to front.
-     */
     public boolean mouseClicked(double mouseX, double mouseY, int button) {
         return this.inputRouter.mouseClicked(mouseX, mouseY, button);
     }
@@ -159,14 +126,6 @@ public record RtsFloatingWindowLayer(List<RtsWindowPanel> frontToBackWindows,
 
     public boolean mouseReleased(double mouseX, double mouseY, int button) {
         return this.inputRouter.mouseReleased(mouseX, mouseY, button);
-    }
-
-    public boolean consumeAnyBoundsDirty() {
-        boolean dirty = false;
-        for (RtsWindowPanel window : this.frontToBackWindows) {
-            dirty = window.consumeBoundsDirty() || dirty;
-        }
-        return dirty;
     }
 
     public boolean mouseScrolled(double mouseX, double mouseY, double scrollX, double scrollY) {
@@ -181,14 +140,19 @@ public record RtsFloatingWindowLayer(List<RtsWindowPanel> frontToBackWindows,
         return this.inputRouter.charTyped(codePoint, modifiers);
     }
 
+    public boolean consumeAnyBoundsDirty() {
+        boolean dirty = false;
+        for (RtsWindowPanel window : this.frontToBackWindows) {
+            dirty = window.consumeBoundsDirty() || dirty;
+        }
+        return dirty;
+    }
+
     public void clearTransientInputState() {
         this.inputRouter.clearTransientState();
     }
 
-    /**
-     * 只有窗口真正置顶后才排序；静止渲染帧只做固定小列表的有序检查。
-     * 这也让输入不再依赖“之前恰好先 render 过一次”的隐含前提。
-     */
+    /** 输入和渲染都主动校正层序，不依赖此前是否已经渲染过一帧。 */
     private void ensureZOrder() {
         for (int i = 1; i < this.frontToBackWindows.size(); i++) {
             if (this.frontToBackWindows.get(i - 1).getLastClickTime()
